Finish styles and sketch card creator

--- a/css/colors.css
+++ b/css/colors.css
@@ -1,7 +1,7 @@
 :root {
     --skin-primary-color: #EDC7B7;
     --skin-secondary-color: #EEE2DC;
-    --pale-grey-color: #BAB2B5;
+    --pale-grey-color: #ededed;
     --dark-blue-color: #123C69;
     --ruby-red-color: #AC3B61;
 }
